# Peach-Chess

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
assets/: Thumbs.db
include/: Bishop.hpp  Board.hpp  Engine.hpp  Game.hpp  King.hpp  Knight.hpp  MessageBoxManager.hpp  Pawn.hpp  Piece.hpp  Position.hpp  Queen.hpp  Rook.hpp  TextureManage.hpp  TextureManager.hpp
src/: Bishop.cpp  Board.cpp  Engine.cpp  Game.cpp  King.cpp  Knight.cpp  MessageBoxManager.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  TextureManage.cpp  TextureManager.cpp  main.cpp
